Agregando link de la Licencia.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </button>
                         </fieldset>
             
-                        <p class="copyright">Modified by <a href="#" target="_blank" title="Colorlib">Mila && Dieguin :P</a></p>
+                        <p class="copyright">Modified by <a href="https://github.com/DiegoPerozo/tele-book/blob/master/LICENSE" target="_blank" title="Colorlib">Mila && Dieguin :P</a></p>
                     </form>
               </div>
         </section>
@@ -141,7 +141,7 @@
             </div>
 
             <div class="created">
-                <p>Desarrollado Por ©<a href="#"> Milaa & Dieguin</a></p>
+                <p>Desarrollado Por ©<a href="https://github.com/DiegoPerozo/tele-book/blob/master/LICENSE" target="_blank"> Milaa & Dieguin</a></p>
             </div>
 
         </footer>
