--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>.:: TELE-BOOK ::.</title>
 
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/toastr.min.css">
+    <link rel="stylesheet" href="css/notyf.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -150,8 +150,7 @@
 
         </footer>
     </div>
-    <script src="js/jquery-2.2.3.min.js"></script>
-    <script src="js/toastr.min.js"></script>
+    <script src="js/notyf.min.js"></script>
     <script src="js/web-animations.min.js"></script>
     <script src="js/muuri.min.js"></script>
     <script src="js/main.js"></script>
